<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlankFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="125dp"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="账户："
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle" />

            <TextView
                android:id="@+id/userName"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="1"
                android:text="@string/user_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="已完成任务数："
                android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Subtitle" />

            <TextView
                android:id="@+id/userScore"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_margin="@dimen/text_margin"
                android:layout_weight="1"
                android:text="@string/user_score" />
        </LinearLayout>

        <TextView
            android:id="@+id/userScore2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/infoExtra" />

        <Button
            android:id="@+id/logoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out_text" />
    </LinearLayout>

</FrameLayout>